--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,6 +9,10 @@
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
+        <activity android:name=".android.PunkActivity"
+            android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen" 
+            android:label="@string/app_name">
+        </activity>
     </application>
 
 </manifest>
