--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,13 +4,14 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
-    <uses-sdk android:minSdkVersion="10" />
+    <uses-sdk android:minSdkVersion="10" 
+        android:targetSdkVersion="14"/>
 
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
         <activity android:name=".android.PunkActivity"
-            android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen" 
+            android:theme="@style/Theme.AP" 
             android:label="@string/app_name">
         </activity>
     </application>
