--- a/sample/AndroidPunkTest/AndroidManifest.xml
+++ b/sample/AndroidPunkTest/AndroidManifest.xml
@@ -7,7 +7,7 @@
 	
     <application android:icon="@drawable/ic_launcher" android:label="@string/app_name">
         <activity android:name=".AndroidPunkTestActivity"
-                  android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
+                  android:theme="@style/Theme.AP"
                   android:screenOrientation="landscape"
                   android:configChanges="orientation|keyboard"
                   android:label="@string/app_name">
