--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,7 +9,8 @@
 
     <application
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" >
+        android:label="@string/app_name" 
+        android:hardwareAccelerated="true">
         <activity android:name=".android.PunkActivity"
             android:theme="@style/Theme.AP" 
             android:label="@string/app_name">
