--- a/sample/AndroidPunkTest/AndroidManifest.xml
+++ b/sample/AndroidPunkTest/AndroidManifest.xml
@@ -5,7 +5,10 @@
       android:versionName="1.0">
     <uses-sdk android:minSdkVersion="10" />
 	
-    <application android:icon="@drawable/ic_launcher" android:label="@string/app_name">
+    <application 
+        android:icon="@drawable/ic_launcher" 
+        android:label="@string/app_name"
+        android:hardwareAccelerated="true">
         <activity android:name=".AndroidPunkTestActivity"
                   android:theme="@style/Theme.AP"
                   android:screenOrientation="landscape"
