--- a/sample/AndroidPunkTest/AndroidManifest.xml
+++ b/sample/AndroidPunkTest/AndroidManifest.xml
@@ -4,6 +4,7 @@
       android:versionCode="1"
       android:versionName="1.0">
     <uses-sdk android:minSdkVersion="10" />
+    <uses-permission android:name="android.permission.INTERNET"/>
 	
     <application 
         android:icon="@drawable/ic_launcher" 
