--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,7 +7,8 @@
     <uses-sdk android:minSdkVersion="10" 
         android:targetSdkVersion="14"/>
     <uses-permission android:name="android.permission.INTERNET"/>
-
+	<uses-feature android:glEsVersion="0x00020000" android:required="true" />
+	
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" 
